--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <b>Welcome to the NIQUE INC KML Polygon Generator!</b>
         <p>Only regular polygons can be generated. The origin point is the center of the polygon, the radius is the distance from the center to all the points. </p>
         <p>To use the generated KML file, go to <a href="https://www.google.com/maps/d/" target="_blank" style="color: #1E90FF;">Google My Maps</a>, create a new map, then import the file.</p>
-        <p>Here is some example coordinates, to test the application. It's right on top of the school.</p>
-        <p>-33.82958659697679, 151.24345000646812</p>
+        <p>Here is some example coordinates, to test the application. It's the Eiffel tower.</p>
+        <p>48.858302438693364, 2.2944881074820715</p>
     </div>
 </div>
         <h1 class= "title">KML Polygon Generator</h1>
